# LeishMorphology

./: Leishmania Morphology Pipeline.ipynb  README.md  leish_morphology.py  setup.cfg
leishmorphology/: datastructures.py  directorystructure.py  moore_neighborhood.py  parallelprocess.py  segmentation.py
src/leishmorphology/: __init__.py  segmentation.py
