[metadata]
name = leishmorphology
version = 0.0.1
author = Ulrich Dobramysl
author_email = ulrich.dobramysl@gmail.com
description = Segments single cells from TIF images containing Leishmania parasites
#long_description = file: README.md
#long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scikit-image
    tiffile
    Pillow
    tqdm
    scipy
    numpy
    xmltodict

[options.packages.find]
where = src